Fix Brick-a-Brac runtime decompilation